[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PlanetAlign"
authors = [{ name = "PLANETALIGN", email = "" }]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "torchvision",
    "torchaudio",
    "torch_geometric",
    "gdown",
    "POT"
]
