[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PlanetAlign"
version = "0.1.0"
description = "PlanetAlign is a Python library for network alignment (NA) tasks"
readme = "README.md"
authors = [
    { name = "PLANETALIGN", email = "PlanetAlign.resource@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "torchvision",
    "torchaudio",
    "torch_geometric",
    "gdown",
    "POT"
]
